# user-spray

./: Cargo.toml  LICENSE  README.md
src/: display.rs  lib.rs  main.rs  map.rs  output.rs
src/map/: key.rs  mod.rs
src/tree/: mod.rs  walk.rs
tests/: format.rs
tests/inputs/: 2.stdin  3.stdin  4.stdin  globs.stdin  inner-body-use.stdin  renames.stdin  simple.stdin  turn-name-into-self.stdin
tests/snapshots/: format__after-rustfmt@globs.stdin.snap  format__after-rustfmt@renames.stdin.snap  format__after-rustfmt@simple.stdin.snap  format__after-rustfmt@turn-name-into-self.stdin.snap  format__format.snap.new  format__format@1.stdin.snap  format__format@2.stdin.snap  format__format@3.stdin.snap  format__format@4.stdin.snap  format__format@globs.stdin.snap  format__format@inner-body-use.stdin.snap  format__format@renames.stdin.snap  format__format@simple.stdin.snap  format__format@turn-name-into-self.stdin.snap  format__format@turn-name-into-self.stdin.snap.new
